fix mappers